@@ -55,6 +55,12 @@ class Session
         }
 
         if (isset($remindform)) {
+            $sms_service = ConfigHelper::getConfig('sms.service', '', true);
+            if (($remindform['type'] == 1 && !ConfigHelper::checkConfig('userpanel.mail_credential_reminders'))
+                || ($remindform['type'] == 2 && (!ConfigHelper::checkConfig('userpanel.sms_credential_reminders')) || empty($sms_service))) {
+                return;
+            }
+
             if (ConfigHelper::getConfig('userpanel.google_recaptcha_sitekey') && !$this->ValidateRecaptchaResponse()) {
                 return;
             }
@@ -174,7 +180,7 @@ class Session
                         $authinfo['lastloginip'] = '';
                         $authinfo['failedlogindate'] = 0;
                     }
-                    
+
                     if (time() - $authinfo['failedlogindate'] < 600) {
                         if (isset($authinfo['enabled']) && $authinfo['enabled'] > 0) {
                             $authinfo['enabled'] -= 1;
@@ -188,10 +194,10 @@ class Session
                     $authinfo['failedloginip'] = $this->ip;
                     $this->SetCustomerAuthInfo($authinfo);
                 }
-                
+
                 $this->error = trans('Access denied!');
             }
-            
+
             $this->LogOut();
         }
     }
