@@ -158,6 +158,7 @@ version 25-git (????-??-??):
   - improvement: phpui.customer_ten_existence_scope and phpui.customer_ssn_existence_scope configuration
     variables (both 'global' by default) control scope of customer identifier existence checks [chilan]
   - improvement: let customer pay deadlines assign specific values [chilan]
+  - enhancement: allow to enable/disable userpanel credential reminder methods [chilan]
 
 version 24.0 (2019-05-16):
 
